<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title = "@string/pref_category_title_map_settings">
        <ListPreference
            android:key="@string/pref_key_default_marker_type"
            android:title="@string/pref_title_default_marker_type"
            android:defaultValue="@string/pref_default_value_marker_type"
            android:entries="@array/pref_marker_type_list_titles"
            android:entryValues="@array/pref_marker_type_list_values"
            android:negativeButtonText="@string/pref_text_negative_button"
            android:positiveButtonText="@null" />

        <ListPreference
            android:key="@string/pref_key_default_range_distance"
            android:title="@string/pref_title_default_range_distance"
            android:defaultValue="@string/pref_default_value_range_distance_meter"
            android:entries="@array/pref_range_distance_titles_meter"
            android:entryValues="@array/pref_range_distance_values_meter"
            android:negativeButtonText="@string/pref_text_negative_button"
            android:positiveButtonText="@null" />

        <ListPreference
            android:key="@string/pref_key_default_distance_units"
            android:title="@string/pref_title_distance_units"
            android:defaultValue="@string/pref_default_value_distance_units"
            android:entries="@array/pref_distance_units_titles"
            android:entryValues="@array/pref_distance_units_values"

            android:negativeButtonText="@string/pref_text_negative_button"
            android:positiveButtonText="@null" />
    </PreferenceCategory>



    <PreferenceCategory android:title = "@string/pref_title_demo_mode">
    <!-- A 'parent' preference, which enables/disables child preferences (below)
    when checked/unchecked. -->
        <CheckBoxPreference
            android:key="@string/pref_key_demo_mode_setting"
            android:title="@string/pref_title_demo_mode"
            android:defaultValue="@string/pref_defualt_value_demo_mode_setting" />
    </PreferenceCategory>

    <!--<PreferenceCategory android:title = "Account">-->
        <!--<ListPreference-->
            <!--android:key="default_account_name"-->
            <!--android:title="Using Account"-->
            <!--android:defaultValue="0"-->
            <!--android:entries="@array/pref__list_titles"-->
            <!--android:entryValues="@array/pref_marker_type_list_values"-->
            <!--android:negativeButtonText="@null"-->
            <!--android:positiveButtonText="@null" />-->
        <!-- -->
    <!--</PreferenceCategory>-->
        <!-- -->







    <!--<PreferenceCategory android:title = "@string/pref_header_general">-->

        <!--<CheckBoxPreference-->
            <!--android:key="example_checkbox"-->
            <!--android:title="@string/pref_title_social_recommendations"-->
            <!--android:summary="@string/pref_description_social_recommendations"-->
            <!--android:defaultValue="true" />-->

        <!--&lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;-->
        <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
        <!--<EditTextPreference-->
            <!--android:key="example_text"-->
            <!--android:title="@string/pref_title_display_name"-->
            <!--android:defaultValue="@string/pref_default_display_name"-->
            <!--android:selectAllOnFocus="true"-->
            <!--android:inputType="textCapWords"-->
            <!--android:capitalize="words"-->
            <!--android:singleLine="true"-->
            <!--android:maxLines="1" />-->

        <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
             <!--dismiss it. &ndash;&gt;-->
        <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
        <!--<ListPreference-->
            <!--android:key="example_list"-->
            <!--android:title="@string/pref_title_add_friends_to_messages"-->
            <!--android:defaultValue="-1"-->
            <!--android:entries="@array/pref_example_list_titles"-->
            <!--android:entryValues="@array/pref_example_list_values"-->
            <!--android:negativeButtonText="@null"-->
            <!--android:positiveButtonText="@null" />-->
    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory android:title = "@string/pref_header_notifications">-->
        <!--&lt;!&ndash; A 'parent' preference, which enables/disables child preferences (below)-->
          <!--when checked/unchecked. &ndash;&gt;-->
        <!--<CheckBoxPreference-->
            <!--android:key="notifications_new_message"-->
            <!--android:title="@string/pref_title_new_message_notifications"-->
            <!--android:defaultValue="true" />-->

        <!--&lt;!&ndash; Allows the user to choose a ringtone in the 'notification' category. &ndash;&gt;-->
        <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
        <!--&lt;!&ndash; NOTE: RingtonePreference's summary should be set to its value by the activity code. &ndash;&gt;-->
        <!--<RingtonePreference-->
            <!--android:dependency="notifications_new_message"-->
            <!--android:key="notifications_new_message_ringtone"-->
            <!--android:title="@string/pref_title_ringtone"-->
            <!--android:ringtoneType="notification"-->
            <!--android:defaultValue="content://settings/system/notification_sound" />-->

        <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
        <!--<CheckBoxPreference-->
            <!--android:dependency="notifications_new_message"-->
            <!--android:key="notifications_new_message_vibrate"-->
            <!--android:title="@string/pref_title_vibrate"-->
            <!--android:defaultValue="true" />-->

    <!--</PreferenceCategory>-->
        <!--<PreferenceCategory android:title = "@string/pref_header_data_sync">-->
            <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
  <!--dismiss it. &ndash;&gt;-->
            <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
            <!--<ListPreference-->
                <!--android:key="sync_frequency"-->
                <!--android:title="@string/pref_title_sync_frequency"-->
                <!--android:entries="@array/pref_sync_frequency_titles"-->
                <!--android:entryValues="@array/pref_sync_frequency_values"-->
                <!--android:defaultValue="180"-->
                <!--android:negativeButtonText="@null"-->
                <!--android:positiveButtonText="@null" />-->

            <!--&lt;!&ndash; This preference simply launches an intent when selected. Use this UI sparingly, per-->
                 <!--design guidelines. &ndash;&gt;-->
            <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
                <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
            <!--</Preference>-->

    <!--</PreferenceCategory>-->

</PreferenceScreen>